# orb-slam3-rust

./: CLAUDE.md  Cargo.toml  README.md
.claude/agents/: rust-test-creator.md
src/: lib.rs  main.rs
src/atlas/: atlas.rs  keyframe_db.rs  mod.rs
src/atlas/map/: keyframe.rs  map.rs  map_point.rs  mod.rs  types.rs
src/geometry/: frames.rs  mod.rs  pnp.rs  sim3.rs  so3.rs
src/imu/: mod.rs  preintegration.rs  sample.rs  state.rs  types.rs
src/io/: euroc.rs
src/local_mapping/: imu_init.rs  local_mapper.rs  mod.rs  search_in_neighbors.rs  triangulation.rs
src/loop_closing/: corrector.rs  detector.rs  loop_closer.rs  mod.rs  sim3_solver.rs
src/math/: mod.rs
src/optimizer/: global_ba.rs  imu_factors.rs  inertial_init_optim.rs  local_ba.rs  local_ba_lm.rs  local_inertial_ba.rs  mod.rs  pose_graph.rs  pose_inertial_optim.rs
src/system/: messages.rs  mod.rs  shared_state.rs  slam_system.rs
src/tracking/: keyframe_decision.rs  local_map.rs  matching.rs  mod.rs  motion_model.rs  pose_estimation.rs  result.rs  state.rs  tracker.rs  tracking_frame.rs
src/tracking/frame/: features.rs  mod.rs  stereo.rs
src/viz/: rerun.rs  rust-orb-slam3-stereo-inertial.rbl
src/vocabulary/: mod.rs
