[package]
name = "rust-vslam"
version = "0.1.0"
edition = "2024"
default-run = "rust-vslam"

[dependencies]
anyhow = "1.0.100"
nalgebra = "0.34.1"
opencv = "0.98.1"
rerun = "0.28.1"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
levenberg-marquardt = "0.15.0"
rand = "0.8"

[dev-dependencies]
approx = "0.5"